# Toggle-Save-For-Email

./: .gitignore  auth-callback.html  commands.html  commands.js  commands.js.map  dialog.html  gh-pages-deploy.yml  manifest.xml  polyfill.js  polyfill.js.map  retry-dialog.html  sign-in-start.html  signin-dialog.html  tag-taskpane.html  taskpane.js  taskpane.js.map
.github/workflows/: gh-pages-deploy.yml
Save Email for Training/: manifest.xml  package-lock.json  package.json  tsconfig.json  webpack.config.js
Save Email for Training/src/: auth-callback.html  commands.html  commands.js  dialog.html  retry-dialog.html  sign-in-start.html  (+1 more)
Save-Email-for-Training/: Dockerfile  Makefile  manifest.xml  package.json  webpack.config.js
_charts/: Chart.yaml  values.dev.yaml
addin/: README.md  manifest.xml  package-lock.json  package.json
backend/: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/_charts/backend/: Chart.yaml  values.dev.yaml  values.prd.yaml
backend/_charts/backend/templates/: autoscaling.yaml  deployment.yaml  service.yaml
backend/_charts/frontend/: Chart.yaml  values.dev.yaml  values.prd.yaml
backend/_charts/frontend/templates/: autoscaling.yaml  configmap.yaml  deployment.yaml  service.yaml
backend/_pipelines/: GitVersion.yml  deploy.yaml
backend/_pipelines/templates/: git-init.yaml  git-version.yaml  k8s-helm-init-frontend.yaml
backend/app/: log_conf.yaml  main.py
backend/app/clients/: blob.py
backend/app/lib/: configurations.py  database_manager.py  logging_helpers.py
(+22 files in other folders)
