[project]
name = "email-training-saver"
version = "0.1.0"
description = "Backend service for saving Outlook emails to Azure Blob Storage"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "azure-storage-blob==12.19.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
